--- a/proj1/app/src/main/res/values/strings.xml
+++ b/proj1/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="startButton">Start</string>
     <string name="player1text">Player 1</string>
     <string name="nameHint">Name</string>
+    <string name="player2text">Player 2</string>
 </resources>
