--- a/proj1/app/src/main/res/values/strings.xml
+++ b/proj1/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="piece_desc">checker pieces design</string>
     <string name="resignButton">Resign</string>
     <string name="doneButton">Done</string>
+    <string name="endMessage">Message</string>
 </resources>
