--- a/proj1/app/src/main/res/values/strings.xml
+++ b/proj1/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="resignButton">Resign</string>
     <string name="doneButton">Done</string>
     <string name="endMessage">Message</string>
+    <string name="dialogue">Instructions</string>
 </resources>
