--- a/proj2/proj1/app/src/main/res/values/strings.xml
+++ b/proj2/proj1/app/src/main/res/values/strings.xml
@@ -4,6 +4,12 @@
     <string name="startButton">Start</string>
     <string name="player1text">Player 1</string>
     <string name="nameHint">Name</string>
+    <string name="userHint">Username</string>
+    <string name="userConfirm">Confirm Username</string>
+    <string name="loginBtn">Login</string>
+    <string name="createBtn">Create New User</string>
+    <string name="passwordHint">Password</string>
+    <string name="passConfirm">Confirm Password</string>
     <string name="player2text">Player 2</string>
     <string name="restart">Restart</string>
     <string name="piece_desc">checker pieces design</string>
