--- a/Project2/app/src/main/res/values/strings.xml
+++ b/Project2/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="password_prompt">Pw:</string>
     <string name="dummy_message">You made it to the dummy!</string>
     <string name="title_activity_dummy">DummyActivity</string>
+    <string name="checkbox">Remember</string>
+
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
