--- a/Project2/app/src/main/res/values/strings.xml
+++ b/Project2/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="title_activity_dummy">DummyActivity</string>
     <string name="checkbox">Remember</string>
     <string name="board_fail">Failed to load board</string>
+    <string name="endmessage">Thank you for playing!</string>
 
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -36,4 +37,8 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="weak">Weak</string>
+    <string name="medium">Medium</string>
+    <string name="very_strong">Very Strong</string>
+    <string name="strong">Strong</string>
 </resources>
